@@ -1,3 +1,11 @@
+2025-09-19  Zhengyi Fu  <i@fuzy.me>
+
+	Refactor quick-window to use named-let and add hooks
+
+	* site-lisp/quick-window.el (quick-window-jump): Replace cl-loop with
+	named-let, remove cl-lib dependency, add pre-jump and post-jump hooks.
+	(quick-window-pre-jump-hook, quick-window-post-jump-hook): New hooks.
+
 2025-09-18  Zhengyi Fu  <i@fuzy.me>
 
 	Improve ediff setup in gptel-tools
